PR/45370: Takehiko NOZAKI: termcap emulation tget{flag,num,str} should work with non-NUL terminated strings.